<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <!--<item-->
            <!--android:id="@+id/nav_camera"-->
            <!--android:icon="@drawable/ic_menu_camera"-->
            <!--android:title="Import" />-->
        <item
            android:id="@+id/nav_customer_data"
            android:icon="@drawable/ic_customer_data"
            android:title="@string/fb_accounts" />
        <item
            android:id="@+id/nav_food_menu"
            android:icon="@drawable/ic_food_menu"
            android:title="@string/fb_menu" />
        <item
            android:id="@+id/nav_bal_sheet"
            android:icon="@drawable/ic_bal_sheet"
            android:title="@string/fb_bal_sheet" />
        <View style="@style/Divider"/>
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_settings"
            android:title="@string/action_settings" />
        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/ic_logout"
            android:title="@string/fb_logout" />

    </group>

    <!--<item android:title="Communicate">-->
        <!--<menu>-->
            <!--<item-->
                <!--android:id="@+id/nav_share"-->
                <!--android:icon="@drawable/ic_menu_share"-->
                <!--android:title="Share" />-->
            <!--<item-->
                <!--android:id="@+id/nav_send"-->
                <!--android:icon="@drawable/ic_menu_send"-->
                <!--android:title="Send" />-->
        <!--</menu>-->
    <!--</item>-->

</menu>
