<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.sachin.canteenos.MainActivity"
    tools:showIn="@layout/home_app_bar">

    <EditText
        android:id="@+id/input1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="@string/enter_id"
        android:inputType="number"
        app:layout_constraintEnd_toEndOf="@+id/submit1"
        app:layout_constraintStart_toStartOf="@+id/input2"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/input2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="@string/enter_amount"
        android:inputType="number"
        app:layout_constraintEnd_toStartOf="@+id/submit1"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/input1" />

    <Button
        android:id="@+id/submit1"
        android:layout_width="148dp"
        android:layout_height="45dp"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:text="@string/button_submit"
        app:layout_constraintBaseline_toBaselineOf="@+id/input2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/input2"
        android:background="@color/ok_green" />

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/heading1"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:background="@color/colorPrimaryDark"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@id/transactions1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/input2"
        app:layout_constraintVertical_bias="1.0">

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:padding="10dp"
            android:text="@string/enter_id"
            android:textColor="@android:color/white"
            android:textAppearance="@android:style/TextAppearance.Material.Medium" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:padding="10dp"
            android:text="@string/enter_amount"
            android:textColor="@android:color/white"
            android:textAppearance="@android:style/TextAppearance.Material.Medium" />

    </LinearLayout>


    <LinearLayout
        android:id="@+id/transactions1"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:background="@color/colorSky"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/heading1">


    </LinearLayout>



</android.support.constraint.ConstraintLayout>
